--- a/config/database.yml
+++ b/config/database.yml
@@ -3,13 +3,13 @@ development:
   encoding: unicode
   database: angular_development
   pool: 5
-  username: dbuser
-  password: xyz321
+  username: postgres
+  password: root
 
 production:
   adapter: postgresql
   encoding: unicode
   database: angular_development
   pool: 5
-  username: dbuser
-  password: xyz321
+  username: postgres
+  password: root
